lab02-master/calMat/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat
-d
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/doc
-encoding
UTF-8
-charset
UTF-8
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java
<---- end of javadoc command ---->
Loading source file /home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java...
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:45: error: illegal start of expression
    public Matriz (int e, int f, int c) {
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:45: error: '.class' expected
    public Matriz (int e, int f, int c) {
                       ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:45: error: ';' expected
    public Matriz (int e, int f, int c) {
                        ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:45: error: <identifier> expected
    public Matriz (int e, int f, int c) {
                                ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:45: error: not a statement
    public Matriz (int e, int f, int c) {
                                     ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:45: error: ';' expected
    public Matriz (int e, int f, int c) {
                                      ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:61: error: illegal start of expression
    public Matriz (int n) {
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:61: error: '.class' expected
    public Matriz (int n) {
                       ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:61: error: ';' expected
    public Matriz (int n) {
                        ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:65: error: illegal start of expression
    public int [] dimension(){
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:65: error: ';' expected
    public int [] dimension(){
                           ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:73: error: illegal start of expression
    public int get(int f, int c){
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:73: error: ';' expected
    public int get(int f, int c){
                  ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:73: error: <identifier> expected
    public int get(int f, int c){
                         ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:73: error: not a statement
    public int get(int f, int c){
                              ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:73: error: ';' expected
    public int get(int f, int c){
                               ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:80: error: illegal start of expression
    public boolean equals (Matriz otra) {
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:80: error: ';' expected
    public boolean equals (Matriz otra) {
                         ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:80: error: ';' expected
    public boolean equals (Matriz otra) {
                                      ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:96: error: ';' expected
    public boolean equals(Object otra) {
                         ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:96: error: ';' expected
    public boolean equals(Object otra) {
                                     ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:106: error: ';' expected
    public String toString () {
                          ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:111: error: illegal start of expression
    public Matriz sume(Matriz m){
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:111: error: ';' expected
    public Matriz sume(Matriz m){
                      ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:111: error: ';' expected
    public Matriz sume(Matriz m){
                               ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:115: error: illegal start of expression
    public Matriz sume(char foc){
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:115: error: ';' expected
    public Matriz sume(char foc){
                      ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:115: error: ';' expected
    public Matriz sume(char foc){
                               ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:119: error: illegal start of expression
    public Matriz sume(){
    ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:119: error: ';' expected
    public Matriz sume(){
                      ^
/home/midr/MIDR/AHORA/DOCENCIA/POOB/JAVA/CALCULADORAS/2019-02Matrix/calMat/Matriz.java:126: error: reached end of file while parsing
}
 ^
31 errors
